# sawyer_robot

./: README.rst  dependencies.sh  sawyer_robot.rosinstall
kinect2_description/: CMakeLists.txt  package.xml
kinect2_description/urdf/: kinect2.urdf.xacro
sawyer_description/config/: sawyer.rviz
sawyer_description/launch/: test_sawyer_description.launch.test
sawyer_description/urdf/: sawyer.urdf.xacro  sawyer_base.urdf.xacro
